--- a/phys24Project.ipynb
+++ b/phys24Project.ipynb
@@ -9,7 +9,7 @@
     "'''todo:\n",
     "- write code that stops simulation if body runs into planet or sun\n",
     "- write code into simulator that counts how many times the body is flung out, runs into planet, runs into sun, etc.\n",
-    "- figure out how to save simulation after it is done running\n",
+    "- figure out how to save simulation after it is done running (both as video and as final image)\n",
     "- put figures of simulations on subplots \n",
     "- figure out what we'd like to display/conclude from our simulation (maybe we test existing ejection constants, \n",
     "figure out size of planet needed to clear orbit, etc.)\n",
